--- a/GUI/frmMain.resx
+++ b/GUI/frmMain.resx
@@ -130,15 +130,24 @@
   <data name="&gt;&gt;accQLHoaDon.Name" xml:space="preserve">
     <value>accQLHoaDon</value>
   </data>
+  <data name="accordionControl.Appearance.Item.Pressed.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Tahoma, 11.25pt</value>
+  </data>
+  <data name="accQLSanPham.Hint" xml:space="preserve">
+    <value>Quản Lý Sản Phẩm</value>
+  </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="lblTime.ImageOptions.LargeImageIndex" type="System.Int32, mscorlib">
     <value>-1</value>
   </data>
+  <data name="arrFunction.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 31</value>
+  </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.FluentDesignSystem.FluentDesignForm, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
-  <data name="&gt;&gt;aceDanhMuc.Name" xml:space="preserve">
-    <value>aceDanhMuc</value>
+  <data name="accQLGhe.Text" xml:space="preserve">
+    <value>Ghế</value>
   </data>
   <data name="&gt;&gt;fluentDesignFormControl1.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.FluentDesignSystem.FluentDesignFormControl, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
@@ -150,6 +159,9 @@
   <data name="mainContainer.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
     <value>Fill</value>
   </data>
+  <data name="&gt;&gt;accQLPhanCa.Name" xml:space="preserve">
+    <value>accQLPhanCa</value>
+  </data>
   <data name="accordionControl.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
   </data>
@@ -157,9 +169,6 @@
     <value>arrFunction</value>
   </data>
   <data name="&gt;&gt;aceHeThong.Type" xml:space="preserve">
-    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
-  </data>
-  <data name="&gt;&gt;accDatVe.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
   <data name="accQLHoaDon.Text" xml:space="preserve">
@@ -195,6 +204,9 @@
   <data name="&gt;&gt;accordionControl.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
+  <data name="lblTime.ImageOptions.ImageIndex" type="System.Int32, mscorlib">
+    <value>-1</value>
+  </data>
   <data name="&gt;&gt;mainContainer.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
@@ -203,6 +215,9 @@
   </data>
   <data name="&gt;&gt;accQLPhongChieu.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
+  </data>
+  <data name="accVe.Text" xml:space="preserve">
+    <value>Vé</value>
   </data>
   <data name="fluentDesignFormControl1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
@@ -216,11 +231,8 @@
   <data name="aceDatVe.Text" xml:space="preserve">
     <value>Đặt vé</value>
   </data>
-  <data name="&gt;&gt;aceDatVe.Type" xml:space="preserve">
-    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
-  </data>
-  <data name="&gt;&gt;mainContainer.Name" xml:space="preserve">
-    <value>mainContainer</value>
+  <data name="&gt;&gt;accBaoCaoThuChi.Name" xml:space="preserve">
+    <value>accBaoCaoThuChi</value>
   </data>
   <data name="&gt;&gt;accQLDanhGiaDoTuoi.Name" xml:space="preserve">
     <value>accQLDanhGiaDoTuoi</value>
@@ -231,9 +243,6 @@
   <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
   </data>
-  <data name="&gt;&gt;aceBaoCao.Name" xml:space="preserve">
-    <value>aceBaoCao</value>
-  </data>
   <data name="accQLPhanCa.Hint" xml:space="preserve">
     <value>Quản lý Phân Ca</value>
   </data>
@@ -243,8 +252,8 @@
   <data name="&gt;&gt;aceDatVe.Name" xml:space="preserve">
     <value>aceDatVe</value>
   </data>
-  <data name="&gt;&gt;accordionControl.Name" xml:space="preserve">
-    <value>accordionControl</value>
+  <data name="&gt;&gt;accQLPhim.Type" xml:space="preserve">
+    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
   <data name="&gt;&gt;accChiPhi.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
@@ -258,17 +267,14 @@
   <data name="accQLPhanCa.Text" xml:space="preserve">
     <value>Phân Ca</value>
   </data>
-  <data name="&gt;&gt;accQLDanhGiaDoTuoi.Type" xml:space="preserve">
-    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
+  <data name="&gt;&gt;mainContainer.Parent" xml:space="preserve">
+    <value>$this</value>
   </data>
   <data name="accDatVe.Text" xml:space="preserve">
     <value>Đặt vé</value>
   </data>
   <data name="&gt;&gt;accDangXuat.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
-  </data>
-  <data name="&gt;&gt;accQLGhe.Name" xml:space="preserve">
-    <value>accQLGhe</value>
   </data>
   <data name="accQLGhe.Hint" xml:space="preserve">
     <value>Quản lý ghế</value>
@@ -281,9 +287,6 @@
   </data>
   <data name="&gt;&gt;fluentDesignFormControl1.ZOrder" xml:space="preserve">
     <value>2</value>
-  </data>
-  <data name="aceHeThong.Text" xml:space="preserve">
-    <value>Hệ thống</value>
   </data>
   <data name="aceDatVe.Hint" xml:space="preserve">
     <value>Đặt vé xem phim</value>
@@ -330,14 +333,17 @@
   <data name="&gt;&gt;accVe.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
-  <data name="lblTime.ImageOptions.SvgImage" type="System.Resources.ResXNullRef, System.Windows.Forms">
-    <value />
+  <data name="accordionControl.Appearance.Item.Default.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Tahoma, 11.25pt</value>
   </data>
   <data name="&gt;&gt;arrFunction.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControl, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
   <data name="accCaiDat.Text" xml:space="preserve">
     <value>Cài đặt</value>
+  </data>
+  <data name="accQLCaLamViec.Hint" xml:space="preserve">
+    <value>Quản lý Ca Làm Việc</value>
   </data>
   <data name="mainContainer.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -348,14 +354,14 @@
   <data name="accQLDanhGiaDoTuoi.Hint" xml:space="preserve">
     <value>Quản lý Đánh giá độ tuổi</value>
   </data>
+  <data name="&gt;&gt;accQLHoaDon.Type" xml:space="preserve">
+    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
+  </data>
   <data name="accQLPhongChieu.Text" xml:space="preserve">
     <value>Phòng Chiếu</value>
   </data>
   <data name="accThoat.Text" xml:space="preserve">
     <value>Thoát</value>
-  </data>
-  <data name="&gt;&gt;accBaoCaoThuChi.Name" xml:space="preserve">
-    <value>accBaoCaoThuChi</value>
   </data>
   <data name="accQLPhim.Hint" xml:space="preserve">
     <value>Quản Lý Phim</value>
@@ -363,8 +369,8 @@
   <data name="&gt;&gt;mainContainer.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.FluentDesignSystem.FluentDesignFormContainer, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
-  <data name="arrFunction.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 4, 4, 4</value>
+  <data name="&gt;&gt;accQLGhe.Name" xml:space="preserve">
+    <value>accQLGhe</value>
   </data>
   <data name="&gt;&gt;fluentFormDefaultManager1.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.FluentDesignSystem.FluentFormDefaultManager, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
@@ -372,8 +378,8 @@
   <data name="aceBaoCao.Text" xml:space="preserve">
     <value>Báo cáo</value>
   </data>
-  <data name="accVe.Text" xml:space="preserve">
-    <value>Vé</value>
+  <data name="&gt;&gt;aceDanhMuc.Name" xml:space="preserve">
+    <value>aceDanhMuc</value>
   </data>
   <data name="&gt;&gt;accQLCaLamViec.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
@@ -384,9 +390,6 @@
   <data name="&gt;&gt;accBaoCaoTonKho.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
-  <data name="&gt;&gt;fluentDesignFormControl1.Name" xml:space="preserve">
-    <value>fluentDesignFormControl1</value>
-  </data>
   <data name="&gt;&gt;accQLGhe.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
@@ -396,7 +399,7 @@
   <data name="&gt;&gt;accLoaiChiPhi.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
-  <data name="&gt;&gt;aceBaoCao.Type" xml:space="preserve">
+  <data name="&gt;&gt;accQLSuatChieu.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
@@ -405,8 +408,8 @@
   <data name="&gt;&gt;accBaoCaoTonKho.Name" xml:space="preserve">
     <value>accBaoCaoTonKho</value>
   </data>
-  <data name="&gt;&gt;accQLHoaDon.Type" xml:space="preserve">
-    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
+  <data name="&gt;&gt;mainContainer.Name" xml:space="preserve">
+    <value>mainContainer</value>
   </data>
   <data name="&gt;&gt;accLoaiChiPhi.Name" xml:space="preserve">
     <value>accLoaiChiPhi</value>
@@ -417,14 +420,14 @@
   <data name="accQLDanhGiaDoTuoi.Text" xml:space="preserve">
     <value>Đánh giá độ tuổi</value>
   </data>
-  <data name="&gt;&gt;aceHeThong.Name" xml:space="preserve">
-    <value>aceHeThong</value>
-  </data>
-  <data name="&gt;&gt;accQLSuatChieu.Type" xml:space="preserve">
+  <data name="&gt;&gt;aceBaoCao.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
-  <data name="&gt;&gt;accQLPhanCa.Name" xml:space="preserve">
-    <value>accQLPhanCa</value>
+  <data name="&gt;&gt;aceDatVe.Type" xml:space="preserve">
+    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
+  </data>
+  <data name="&gt;&gt;fluentDesignFormControl1.Name" xml:space="preserve">
+    <value>fluentDesignFormControl1</value>
   </data>
   <data name="accChiPhi.Text" xml:space="preserve">
     <value>Chi phí</value>
@@ -446,51 +449,6 @@
   </data>
   <data name="fluentDesignFormControl1.Size" type="System.Drawing.Size, System.Drawing">
     <value>1198, 31</value>
-  </data>
-  <data name="arrFunction.Size" type="System.Drawing.Size, System.Drawing">
-    <value>48, 768</value>
-  </data>
-  <data name="&gt;&gt;accQLPhongChieu.Name" xml:space="preserve">
-    <value>accQLPhongChieu</value>
-  </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>frmMain</value>
-  </data>
-  <data name="&gt;&gt;accBaoCaoThuChi.Type" xml:space="preserve">
-    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
-  </data>
-  <data name="&gt;&gt;accVe.Name" xml:space="preserve">
-    <value>accVe</value>
-  </data>
-  <data name="accQLCaLamViec.Text" xml:space="preserve">
-    <value>Ca Làm Việc</value>
-  </data>
-  <data name="&gt;&gt;accCaiDat.Name" xml:space="preserve">
-    <value>accCaiDat</value>
-  </data>
-  <data name="accQLPhongChieu.Hint" xml:space="preserve">
-    <value>Quản Lý Phòng Chiếu</value>
-  </data>
-  <data name="accQLNhanVien.Text" xml:space="preserve">
-    <value>Nhân Viên</value>
-  </data>
-  <data name="accBaoCaoTonKho.Text" xml:space="preserve">
-    <value>Báo cáo Tồn Kho</value>
-  </data>
-  <data name="lblTime.ImageOptions.ImageIndex" type="System.Int32, mscorlib">
-    <value>-1</value>
-  </data>
-  <data name="accBaoCaoDoanhThu.Text" xml:space="preserve">
-    <value>Báo cáo doanh thu</value>
-  </data>
-  <data name="&gt;&gt;accordionControl.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;accQLPhim.Type" xml:space="preserve">
-    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
-  </data>
-  <data name="accBaoCaoThuChi.Text" xml:space="preserve">
-    <value>Báo cáo chi phí</value>
   </data>
   <data name="aceDanhMuc.ImageOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -542,11 +500,59 @@
         SUVORK5CYII=
 </value>
   </data>
+  <data name="arrFunction.Size" type="System.Drawing.Size, System.Drawing">
+    <value>48, 768</value>
+  </data>
+  <data name="&gt;&gt;accQLPhongChieu.Name" xml:space="preserve">
+    <value>accQLPhongChieu</value>
+  </data>
+  <data name="&gt;&gt;$this.Name" xml:space="preserve">
+    <value>frmMain</value>
+  </data>
+  <data name="&gt;&gt;accBaoCaoThuChi.Type" xml:space="preserve">
+    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
+  </data>
+  <data name="&gt;&gt;accVe.Name" xml:space="preserve">
+    <value>accVe</value>
+  </data>
+  <data name="accQLCaLamViec.Text" xml:space="preserve">
+    <value>Ca Làm Việc</value>
+  </data>
+  <data name="&gt;&gt;accCaiDat.Name" xml:space="preserve">
+    <value>accCaiDat</value>
+  </data>
+  <data name="accQLPhongChieu.Hint" xml:space="preserve">
+    <value>Quản Lý Phòng Chiếu</value>
+  </data>
+  <data name="accQLNhanVien.Text" xml:space="preserve">
+    <value>Nhân Viên</value>
+  </data>
+  <data name="aceHeThong.Text" xml:space="preserve">
+    <value>Hệ thống</value>
+  </data>
+  <data name="accBaoCaoDoanhThu.Text" xml:space="preserve">
+    <value>Báo cáo doanh thu</value>
+  </data>
+  <data name="&gt;&gt;accordionControl.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="&gt;&gt;accDatVe.Type" xml:space="preserve">
+    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
+  </data>
+  <data name="accBaoCaoThuChi.Text" xml:space="preserve">
+    <value>Báo cáo chi phí</value>
+  </data>
+  <data name="accBaoCaoTonKho.Text" xml:space="preserve">
+    <value>Báo cáo Tồn Kho</value>
+  </data>
+  <data name="accordionControl.Appearance.Item.Hovered.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Tahoma, 11.25pt</value>
+  </data>
   <data name="&gt;&gt;arrFunction.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="accQLGhe.Text" xml:space="preserve">
-    <value>Ghế</value>
+  <data name="&gt;&gt;aceHeThong.Name" xml:space="preserve">
+    <value>aceHeThong</value>
   </data>
   <data name="&gt;&gt;accQLPhim.Name" xml:space="preserve">
     <value>accQLPhim</value>
@@ -560,8 +566,8 @@
   <data name="aceDanhMuc.Text" xml:space="preserve">
     <value>Quản lý danh mục</value>
   </data>
-  <data name="arrFunction.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 31</value>
+  <data name="lblTime.ImageOptions.SvgImage" type="System.Resources.ResXNullRef, System.Windows.Forms">
+    <value />
   </data>
   <data name="&gt;&gt;accQLNhanVien.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
@@ -572,23 +578,26 @@
   <data name="&gt;&gt;lblTime.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.BarHeaderItem, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
-  <data name="accQLCaLamViec.Hint" xml:space="preserve">
-    <value>Quản lý Ca Làm Việc</value>
+  <data name="arrFunction.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+    <value>4, 4, 4, 4</value>
   </data>
-  <data name="&gt;&gt;accBaoCaoDoanhThu.Type" xml:space="preserve">
+  <data name="&gt;&gt;accordionControl.Name" xml:space="preserve">
+    <value>accordionControl</value>
+  </data>
+  <data name="&gt;&gt;accQLDanhGiaDoTuoi.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
-  <data name="accQLSanPham.Hint" xml:space="preserve">
-    <value>Quản Lý Sản Phẩm</value>
-  </data>
-  <data name="&gt;&gt;mainContainer.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="&gt;&gt;aceBaoCao.Name" xml:space="preserve">
+    <value>aceBaoCao</value>
   </data>
   <data name="&gt;&gt;accordionControl.Type" xml:space="preserve">
     <value>DevExpress.XtraBars.Navigation.AccordionControl, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
   <data name="&gt;&gt;accQLNhanVien.Name" xml:space="preserve">
     <value>accQLNhanVien</value>
+  </data>
+  <data name="&gt;&gt;accBaoCaoDoanhThu.Type" xml:space="preserve">
+    <value>DevExpress.XtraBars.Navigation.AccordionControlElement, DevExpress.XtraBars.v22.2, Version=22.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a</value>
   </data>
   <data name="&gt;&gt;accQLSuatChieu.Name" xml:space="preserve">
     <value>accQLSuatChieu</value>
